Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28843

Double clicking action on Incoming entry in Call Hierarchy panel inconsistent to Type Hierarchy panel

    XMLWordPrintable

Details

    • Linux/X11
    • 459cb8274 (master)

    Description

      When I double click on an entry in the Type Hierarchy panel it will refresh the Type Hierarchy for the double-clicked element.

      When I double click on an Incoming entry in the Call Hierarchy it does not refresh the Hierarchy for the double clicked element but expands the element (shows possible childs).

      To expand a tree in the Type Hierarchy panel you must click on the expand/tree indicator (triangle).

      I would like to see the same user interaction in both Hierarchy panels.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            moellney Michael Möllney
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes