LanguageClient: Update call hierarchy on double click on item

This seems sensible and is also consistent with how the type hierarchy
widget behaves.

Fixes: QTCREATORBUG-28843
Change-Id: I2423fda68ab2a9624206b8c93f2490e1a7196173
Reviewed-by: David Schulz <david.schulz@qt.io>